...
  <string name="force_download_dialog_successfully_downloaded_message_text" translatable="false">Successfully Downloaded</string>
  <string name="force_download_restart_message_text" translatable="false">Restart app to apply new configuration.</string>
  <string name="feature_flags_activity_title" translatable="false">Feature Flags</string>
  <string name="feature_flag_alert_icon_content_description" translatable="false">Overridden feature flag indicator</string>
  <string name="feature_flag_reset" translatable="false">Reset</string>
  <string name="feature_flag_save" translatable="false">Save</string>
  <string name="feature_flag_never_synced_message" translatable="false">Never synced remotely. Using codebase default value.</string>
  <string name="feature_flag_currently_overridden_message" translatable="false">Currently Overridden.</string>
  <string name="feature_flag_synced_from_server_message" translatable="false">Synced with the Server.</string>
  <string name="platform_parameters_activity_title" translatable="false">Platform Parameters</string>
  <string name="platform_parameter_invalid_input_error_msg" translatable="false">Invalid Value</string>
  <string name="platform_parameter_invalid_input_alert_dialog_title" translatable="false">Invalid Inputs</string>
  <string name="platform_parameter_invalid_input_alert_dialog_message" translatable="false">Please ensure all fields have valid values to continue.</string>
  <string name="platform_parameter_reset" translatable="false">Reset</string>
  <string name="platform_parameters_save" translatable="false">Save</string>
...
