...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{viewModel.featureFlagDisplayName}"
        android:textColor="@color/component_color_shared_primary_dark_text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/feature_flag_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/feature_flag_switch"
        android:layout_width="wrap_content"
...
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@{viewModel.syncDetails}"
        android:textColor="@color/component_color_shared_primary_dark_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reset_button"
        app:layout_constraintStart_toEndOf="@id/currently_overridden_alert_icon"
        app:layout_constraintTop_toTopOf="parent" />

      <Button
        android:id="@+id/reset_button"
        style="@style/StateButtonActive"
...
