...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/feature_flags_app_bar_layout">

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feature_flags_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="40dp"
        android:scrollbars="none"
...
